--- a/README.rdoc
+++ b/README.rdoc
@@ -83,4 +83,4 @@ http://jsony.org/ coming soon.
 
 = Copyright
 
-Copyright (c) 2012 Ingy döt Net. See LICENSE for further details.
+Copyright (c) 2012, 2013 Ingy döt Net. See LICENSE for further details.
